# magicbell-python-sdk

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: base-linting.yaml  ci.yaml  publish-docs.yaml  publish.yaml
.openapi-generator/: FILES
docs/: ChannelOverrides.md  CreateNotification201Response.md  CreateNotification422Response.md  CreateNotification422ResponseErrorsInner.md  CreatedNotificationBroadcast.md  CreatedPushSubscription.md  Notification.md  NotificationBroadcast.md  NotificationOverrides.md  NotificationOverridesChannels.md  NotificationOverridesProviders.md  NotificationPreferences.md  NotificationPreferencesCategories.md  Notifications.md  PushSubscription.md  RealTimeApi.md  Recipient.md  User.md  UserPreferencesCategory.md  UsersApi.md  WrappedNotification.md  WrappedNotificationPreferences.md  WrappedPushSubscription.md  WrappedUser.md  index.md
docs/examples/: 03 - Projects.ipynb  04 - GraphQL.ipynb  index.md
docs/reference/: configuration.md  magicbell-client.md  realtime-api.md  user-api.md
examples/: 02 - Users.ipynb  README.md  index.html
examples/01 - Getting Started/: 01 - Getting Started.ipynb  index.html
examples/02 - Users/: index.html
examples/03 - Projects/: index.html
examples/04 - GraphQL/: index.html
magicbell/: __init__.py  api_client.py  client.py  configuration.py  errors.py  exceptions.py  rest.py
magicbell/api/: __init__.py  _base.py  _parsing.py  channels.py  graphql.py  project.py  real_time_api.py  realtime.py  user.py  users_api.py
magicbell/model/: __init__.py  _base.py  channels.py  notification.py  project.py  response.py  user.py  workspace.py
magicbell/models/: __init__.py  channel_overrides.py  create_notification201_response.py  create_notification422_response.py  created_notification_broadcast.py  (+18 more)
search/: search_index.json
test/: test_channel_overrides.py  test_create_notification201_response.py  test_create_notification422_response.py  test_create_notification422_response_errors_inner.py  test_created_notification_broadcast.py  test_created_push_subscription.py  test_notification.py  test_notification_broadcast.py  test_notification_overrides.py  test_notification_overrides_channels.py  test_notification_overrides_providers.py  test_notification_preferences.py  test_notification_preferences_categories.py  test_notifications.py  test_push_subscription.py  test_real_time_api.py  test_recipient.py  test_user.py  test_user_preferences_category.py  test_users_api.py  test_wrapped_notification.py  test_wrapped_notification_preferences.py  test_wrapped_push_subscription.py  test_wrapped_user.py
tests/: conftest.py  mock_server.py  test_client.py  test_configuration.py  test_placeholder.py
(+13 files in other folders)
