[tool.poetry]
name = "magicbell"
version = "0.1.0"
description = "Unofficial Python SDK for MagicBell"
authors = ["Elijah Wilson <eli@noteable.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
python-dateutil = "^2.8.2"
urllib3 = "^1.26.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.12.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line-length = 99
