[tool.poetry]
name = "magicbell"
version = "1.1.0"
description = "Unofficial Python SDK for MagicBell"
authors = ["Elijah Wilson <eli@noteable.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/noteable-io/magicbell-python-sdk"
keywords = ["magicbell", "sdk"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
httpx = "^0.23.0"
orjson = "^3.7.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.12.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^5.0.1"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"
bump2version = "^1.0.1"
pytest-xdist = "^2.5.0"
starlette = "^0.20.4"
pytest-asyncio = "^0.19.0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.coverage.run]
branch = false
omit = ["magicbell/_version.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["if self.debug:",
                 "pragma: no cover",
                 "raise AssertionError",
                 "raise NotImplementedError",
                 "if __name__ == '__main__':"]
ignore_errors = true
omit = ["magicbell/_version.py"]
